cabal-version: 2.4

category: User Interfaces
author: Mitchell Rosen
bug-reports: https://github.com/termbox/termbox-haskell/issues
build-type: Simple
copyright: (c) 2018-2022, Mitchell Rosen
description:
  This package provides a high-level wrapper around @termbox@, a simple C
  library for writing text-based user interfaces: <https://github.com/termbox/termbox>
homepage: https://github.com/termbox/termbox-haskell
license-file: LICENSE
license: BSD-3-Clause
maintainer: Mitchell Rosen <mitchellwrosen@gmail.com>
name: termbox
synopsis: termbox
tested-with: GHC == 9.0.2, GHC == 9.2.4, GHC == 9.4.1
version: 0.4.0

extra-source-files:
  CHANGELOG.md

source-repository head
  type: git
  location: git://github.com/termbox/termbox-haskell.git

flag build-examples
  default: False
  manual: True

common component
  default-extensions:
    DerivingStrategies
    DuplicateRecordFields
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    NamedFieldPuns
    TypeApplications
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

library
  import: component
  build-depends:
    base ^>= 4.10 || ^>= 4.11 || ^>= 4.12 || ^>= 4.13 || ^>= 4.14 || ^>= 4.15 || ^>= 4.16 || ^>= 4.17,
    termbox-bindings ^>= 0.1,
  exposed-modules: Termbox
  hs-source-dirs: src
  other-modules:
    Termbox.Attr
    Termbox.Cell
    Termbox.Cells
    Termbox.Event
    Termbox.Key
    Termbox.Mouse

executable termbox-example-colors
  import: component
  if !flag(build-examples)
    buildable: False
  build-depends:
    base,
    termbox,
  ghc-options:
    -rtsopts
    -threaded
  hs-source-dirs: examples
  main-is: Colors.hs
