cabal-version: 2.4

author: Mitchell Rosen
bug-reports: https://github.com/awkward-squad/termbox/issues
build-type: Simple
category: User Interfaces
copyright: (c) 2023 Mitchell Rosen, Travis Staton
description:
  This package provides bindings to @termbox2@, a simple C library for writing text-based user interfaces:
  <https://github.com/termbox/termbox2>
  .
  The full source of @termbox2@ is bundled; you do not need to install any system packages to use this library.
homepage: https://github.com/awkward-squad/termbox
license-file: LICENSE
license: BSD-3-Clause
maintainer: Mitchell Rosen <mitchellwrosen@gmail.com>, Travis Staton <hello@travisstaton.com>
name: termbox2-bindings-c
synopsis: termbox2 bindings
tested-with: GHC == 9.6.3, GHC == 9.8.1
version: 1.0.0

extra-doc-files:
  CHANGELOG.md
  cbits/LICENSE

extra-source-files:
  cbits/termbox2.h

source-repository head
  type: git
  location: git://github.com/awkward-squad/termbox.git
  subdir: termbox2-bindings-c

library
  build-depends: base ^>= 4.18 || ^>= 4.19
  -- These cc-options don't get passed when compiling capi wrappers: https://gitlab.haskell.org/ghc/ghc/-/issues/21835
  -- Rather than use ccall, we just manually define TB_LIB_OPTS in termbox.h instead.
  -- cc-options: -DTB_LIB_OPTS
  default-extensions:
    CApiFFI
    DerivingStrategies
    DuplicateRecordFields
    InterruptibleFFI
  default-language: GHC2021
  exposed-modules: Termbox2.Bindings.C
  hs-source-dirs: src
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 9.8)
    ghc-options:
      -Wno-missing-role-annotations
  include-dirs: cbits
  -- termbox2.h version:
  --   df4d01bf468853713906cc427c9635380a4c60bb on September 22, 2023
  includes: termbox2.h
  other-modules:
    Termbox2.Bindings.C.Internal.Constants
    Termbox2.Bindings.C.Internal.Cell
    Termbox2.Bindings.C.Internal.Event
    Termbox2.Bindings.C.Internal.Functions
