cabal-version: 2.4

author: Mitchell Rosen
bug-reports: https://github.com/awkward-squad/termbox/issues
build-type: Simple
category: User Interfaces
copyright: (c) 2023 Mitchell Rosen, Travis Staton
description:
  This package provides bindings to @termbox2@, a simple C library for writing text-based user interfaces:
  <https://github.com/termbox/termbox2>
  .
  The full source of @termbox2@ is bundled; you do not need to install any system packages to use this library.
  .
  See also:
  .
  * @<https://hackage.haskell.org/package/termbox2-bindings-c termbox2-bindings-c>@ for lower-level bindings.
homepage: https://github.com/awkward-squad/termbox
license-file: LICENSE
license: BSD-3-Clause
maintainer: Mitchell Rosen <mitchellwrosen@gmail.com>, Travis Staton <hello@travisstaton.com>
name: termbox2-bindings-hs
synopsis: termbox2 bindings
tested-with: GHC == 9.6.3, GHC == 9.8.1
version: 1.0.0

extra-doc-files:
  CHANGELOG.md

source-repository head
  type: git
  location: git://github.com/awkward-squad/termbox.git
  subdir: termbox2-bindings-hs

-- flag build-examples
--   default: False
--   manual: True

common component
  default-language: GHC2021
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 9.8)
    ghc-options:
      -Wno-missing-role-annotations

library
  import: component
  build-depends:
    base ^>= 4.18 || ^>= 4.19,
    termbox2-bindings-c ^>= 1.0.0,
    text ^>= 2.0 || ^>= 2.1,
  default-extensions:
    BlockArguments
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    NamedFieldPuns
    PatternSynonyms
    ViewPatterns
  exposed-modules: Termbox2.Bindings.Hs
  hs-source-dirs: src
  other-modules:
    Termbox2.Bindings.Hs.Internal.Attr
    Termbox2.Bindings.Hs.Internal.Error
    Termbox2.Bindings.Hs.Internal.Event
    Termbox2.Bindings.Hs.Internal.EventMod
    Termbox2.Bindings.Hs.Internal.EventType
    Termbox2.Bindings.Hs.Internal.Functions
    Termbox2.Bindings.Hs.Internal.InputMode
    Termbox2.Bindings.Hs.Internal.Key
    Termbox2.Bindings.Hs.Internal.OutputMode
    Termbox2.Bindings.Hs.Internal.Prelude

-- executable termbox2-bindings-hs-example-demo
--   import: component
--   if !flag(build-examples)
--     buildable: False
--   build-depends:
--     base,
--     termbox2-bindings-hs
--   hs-source-dirs: examples
--   main-is: Demo.hs
